--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "transformersjs-chrome",
-  "displayName": "Private AI Assistant: Running LLM locally",
-  "version": "0.0.4",
-  "description": "Private AI Assistant enables users to interact with language models directly in their browser without an internet connection.",
-  "author": "Taekmin Kim <tantara.tm@gmail.com>",
+  "displayName": "Freddy AI Assistant: Running LLM locally",
+  "version": "0.0.1",
+  "description": "Freddy AI Assistant enables users to interact with language models directly in their browser without an internet connection.",
+  "author": "",
   "scripts": {
     "dev": "pnpm with-env plasmo dev",
     "build": "pnpm with-env plasmo build",
